fixed menu text align

--- a/css/menu.css
+++ b/css/menu.css
@@ -7,11 +7,11 @@
 #menu1, #menu2, #menu3 {
     position: absolute;
     background-color: white;
-    width: 10%;
+    width: 20%;
     height: 100%;
-    padding-left: 10%;
     border-radius: 8px;
     border-color: black;
+    text-align: center;
 }
 #menu2 {
     transform: translateX(110%);
